# hairo-world-plugin

./: .clang-format  CMakeLists.txt  LICENSE  README.md  package.xml
sample/: CMakeLists.txt
sample/BeepPlugin/: BeepItem.cpp  BeepView.cpp  BeepView.h  BeepWidget.cpp  BeepWidget.h  CMakeLists.txt  exportdecl.h  gettext.h
sample/BoxROV/: BoxROV.body  BoxROV.cnoid  CMakeLists.txt
sample/ColliderTest/: CMakeLists.txt
sample/Crawler/: CMakeLists.txt
sample/EventTest/: BeepTest.cnoid  FlightTest.cnoid  VisionTest.cnoid  beep_events.yaml  flight_events.yaml  vfx_events.yaml
sample/FileBoxPlugin/: CMakeLists.txt  FileBoxView.h  FileBoxWidget.h
sample/HAIROWorld/: CMakeLists.txt
sample/HaiROV/: CMakeLists.txt  HaiROV.cnoid
sample/HobbyDrone/: HobbyDrone.cnoid  HobbyDrone2.cnoid
sample/IKPlannerPlugin/: CMakeLists.txt  IKPlannerItem.cpp  IKPlannerItem.h  IKPlannerPlugin.cpp  gettext.h
sample/IconPreview/: CMakeLists.txt  IconPreviewPlugin.cpp  IconTheme.h
sample/JACO2/: CMakeLists.txt  JACO2.cnoid
sample/Lift/: CMakeLists.txt  LiftSample.cnoid  LiftSamplePlugin.cpp  LiftSimulatorItem.cpp  LiftSimulatorItem.h  SimpleROV.body  WingController.cpp
sample/MarkerDetectPlugin/: CMakeLists.txt  MarkerDetectPlugin.cpp  MarkerDetectorItem.cpp  MarkerDetectorItem.h  ScopeDevice.cpp  ScopeDevice.h  exportdecl.h  gettext.h
sample/MarkerDetection/: CMakeLists.txt  MarkerDetectPlugin.cpp  MarkerDetectorItem.cpp  MarkerDetectorItem.h  ScopeDevice.cpp  ScopeDevice.h
sample/OMPLPlugin/: CMakeLists.txt  IKMotionPlannerItem.cpp  IKMotionPlannerItem.h  IKPlannerItem.cpp  IKPlannerItem.h  MotionPlanner.cpp  MotionPlanner.h  MotionPlannerDialog.cpp  MotionPlannerDialog.h  MotionPlannerItem.cpp  MotionPlannerItem.h  OMPLPlugin.cpp
sample/PHITS/: CMakeLists.txt  Cs134_Cs137_Cs134_Co60.body  DoseMeterController.cpp  Tank-phits.cnoid  Tank-phits2.cnoid  Tank-phits3.cnoid  floor.body  sphere1.body
sample/QAD/: CMakeLists.txt
sample/SceneImagePlugin/: CMakeLists.txt  SceneImagePlugin.cpp  SceneImageView.cpp  SceneImageView.h  SceneImageWidget.cpp  SceneImageWidget.h  gettext.h
sample/SimpleController/: CMakeLists.txt  Gen2.cnoid  Gen2JointMapController.cpp  Gen2JoystickController.cpp  Gen3.cnoid  Gen3JoystickController.cpp  Gen3lite.cnoid  Gen3liteJoystickController.cpp  HUSKY.cnoid  HUSKYJoystickController.cpp  Husky-UR5-2F85.cnoid  Husky.cnoid  HuskyJoystickController.cpp  JACKAL.cnoid  JACKALJoystickController.cpp  Jackal.cnoid  JackalJoystickController.cpp  JointMapController.cpp  MonoCrawlerG2A.cnoid  MonoCrawlerG2S.cnoid  MonoCrawlerG3LA.cnoid  MonoCrawlerG3LS.cnoid  MonoCrawlerJoystickController.cpp  MonoCrawlerNA.cnoid  MonoCrawlerNS.cnoid  MonoCrawlerSA.cnoid  MonoCrawlerSS.cnoid  RAJoystickController.cpp  UGVJoystickController.cpp  UR10-2F85.cnoid  UR10.cnoid  UR3-2F85.cnoid  UR3.cnoid  UR5-2F85.cnoid  UR5.cnoid  UR5JoystickController.cpp  URJoystickController.cpp  UniversalRobotJoystickController.cpp
sample/StartupPlugin/: CMakeLists.txt  StartupManager.cpp  StartupManager.h  StartupPlugin.cpp
sample/Tutorial/: BoxROV.body  Tank.cnoid  Tutorial-Fluid.cnoid  Tutorial-Image.cnoid  Tutorial-Motion.cnoid  Tutorial-TC.cnoid  example.body
sample/UnsteadyFlow/: CMakeLists.txt  UnsteadyFlowPlugin.cpp
sample/UnsteadyFlowPlugin/: CMakeLists.txt  UnsteadyFlowPlugin.cpp
sample/ViewSpacerPlugin/: EmptyView.h  ViewSpacerPlugin.cpp  gettext.h
sample/ViewSwitcherPlugin/: CMakeLists.txt  ViewSwitcherDialog.cpp  ViewSwitcherPlugin.cpp
sample/collider-test/: ColliderTestPlugin.cpp  collider-test.cnoid
sample/crawler/: AgxCrawler.cnoid  AistCrawler.cnoid  CMakeLists.txt  materials.yaml
sample/generator/: CMakeLists.txt
sample/hai-rov/: CMakeLists.txt
sample/hobby-drone/: CMakeLists.txt
sample/narrec/: CMakeLists.txt
sample/phits/: CMakeLists.txt
sample/qad/: CMakeLists.txt
sample/robotic-arm/: CMakeLists.txt
sample/rov/: CMakeLists.txt
sample/scene-events/: CMakeLists.txt
sample/spot/: CMakeLists.txt
sample/tutorial/: AgxCrawler.cnoid  AistCrawler.cnoid  BoxROVJoystickController.cpp  CMakeLists.txt  Crawler.cnoid  CrawlerJoystickController.cpp  Tutorial-Beep.cnoid  Tutorial-CFD.cnoid  Tutorial-Fluid.cnoid  Tutorial-IKPlanner.cnoid  Tutorial-Image.cnoid  Tutorial-Motion.cnoid  Tutorial-NetEm.cnoid  Tutorial-OMPL.cnoid  Tutorial-TC.cnoid  Tutorial-Visual.cnoid  agxcrawler.body  aistcrawler.body  crawler.body  example.body  example.csv
sample/uav/: CMakeLists.txt
sample/ugv/: CMakeLists.txt
share/: CMakeLists.txt
share/default/: beep_events.yaml  elements.yaml  filters.yaml  flight_events.yaml  nuclides.yaml  shields.yaml  vfx_events.yaml
src/: CMakeLists.txt
src/BeepPlugin/: BeepCommandItem.cpp  BeepCommandItem.h  BeepEventReader.cpp  BeepEventReader.h  BeepItem.cpp  BeepItem.h  BeepPlugin.cpp  BeepView.cpp  BeepView.h  BeepWidget.cpp  BeepWidget.h  Beeper.cpp  Beeper.h  CMakeLists.txt  exportdecl.h  gettext.h
src/BodyCreatorPlugin/: BentPipeCreator.cpp  BodyCreator.h  BodyCreatorDialog.cpp  BodyCreatorDialog.h  BodyCreatorPlugin.cpp  CMakeLists.txt  ColorButton.cpp  ColorButton.h  CrawlerCreator.cpp  CreatorToolBar.cpp  CreatorToolBar.h  FileDroppableWidget.cpp  FileDroppableWidget.h  FormatConverter.cpp  GratingCreator.cpp  InertiaCalculator.cpp  Notepad.h  PipeCreator.cpp  SlopeCreator.cpp  StairsCreator.cpp  TerrainCreator.cpp  WidgetInfo.h  exportdecl.h  gettext.h
src/BodyEditPlugin/: BentPipeGenerator.cpp  BentPipeGenerator.h  BodyConverter.cpp  BodyConverter.h  BodyEdit.cpp  BodyEdit.h  BodyEditPlugin.cpp  CMakeLists.txt  ColorButton.cpp  ColorButton.h  CrawlerGenerator.cpp  CrawlerGenerator.h  DroppableWidget.cpp  DroppableWidget.h  FileDroppableWidget.cpp  FileDroppableWidget.h  FileFormWidget.cpp  FileFormWidget.h  GratingGenerator.cpp  GratingGenerator.h  InertiaCalculator.cpp  InertiaCalculator.h  Notepad.cpp  Notepad.h  PipeGenerator.cpp  PipeGenerator.h  SlopeGenerator.cpp  SlopeGenerator.h  StairsGenerator.cpp  StairsGenerator.h  TerrainGenerator.cpp  TerrainGenerator.h  exportdecl.h  gettext.h
src/CFDPlugin/: AreaItem.cpp  (+21 more)
(+962 files in other folders)
