add_subdirectory(hai-rov)
add_subdirectory(hobby-drone)
add_subdirectory(IconPreview)
add_subdirectory(Lift)
add_subdirectory(MarkerDetection)
add_subdirectory(minio-client-plugin)
add_subdirectory(ompl-plugin)
add_subdirectory(phits)
add_subdirectory(qad)
add_subdirectory(SimpleController)
add_subdirectory(UnsteadyFlow)
add_subdirectory(tutorial)
add_subdirectory(collider-test)