add_subdirectory(ColliderTest)
add_subdirectory(hai-rov)
add_subdirectory(hobby-drone)
add_subdirectory(IconPreview)
add_subdirectory(Lift)
add_subdirectory(MarkerDetection)
add_subdirectory(minio-client-plugin)
add_subdirectory(narrec)
add_subdirectory(ompl-plugin)
add_subdirectory(phits)
add_subdirectory(qad)
add_subdirectory(robotic-arm)
add_subdirectory(spot)
add_subdirectory(ugv)
add_subdirectory(UnsteadyFlow)