
set(make_symlink false)

if(NOT CNOID_SOURCE_SHARE_DIR STREQUAL CNOID_BINARY_SHARE_DIR)
  if(UNIX)
    set(make_symlink true)
  endif()
  configure_file(default/elements.yaml ${CNOID_BINARY_SHARE_DIR}/default/elements.yaml COPYONLY)
  configure_file(default/filters.yaml ${CNOID_BINARY_SHARE_DIR}/default/filters.yaml COPYONLY)
  configure_file(default/nuclides.yaml ${CNOID_BINARY_SHARE_DIR}/default/nuclides.yaml COPYONLY)
  configure_file(default/shields.yaml ${CNOID_BINARY_SHARE_DIR}/default/shields.yaml COPYONLY)
  if(ENABLE_QAD)
    configure_file(default/LIB/ATTEN.DAT ${CNOID_BINARY_SHARE_DIR}/default/LIB/ATTEN.DAT COPYONLY)
    configure_file(default/LIB/BUF.DAT ${CNOID_BINARY_SHARE_DIR}/default/LIB/BUF.DAT COPYONLY)
    configure_file(default/LIB/DOSECON2.DAT ${CNOID_BINARY_SHARE_DIR}/default/LIB/DOSECON2.DAT COPYONLY)
  endif()
endif()

install(FILES default/elements.yaml DESTINATION ${CNOID_SHARE_SUBDIR}/default)
install(FILES default/filters.yaml DESTINATION ${CNOID_SHARE_SUBDIR}/default)
install(FILES default/nuclides.yaml DESTINATION ${CNOID_SHARE_SUBDIR}/default)
install(FILES default/shields.yaml DESTINATION ${CNOID_SHARE_SUBDIR}/default)

if(ENABLE_QAD)
  install(FILES default/LIB/ATTEN.DAT DESTINATION ${CNOID_SHARE_SUBDIR}/default)
  install(FILES default/LIB/BUF.DAT DESTINATION ${CNOID_SHARE_SUBDIR}/default)
  install(FILES default/LIB/DOSECON2.DAT DESTINATION ${CNOID_SHARE_SUBDIR}/default)
endif()
