add_subdirectory(BodyEditPlugin)
add_subdirectory(CFDPlugin)
add_subdirectory(CollisionSeqPlugin)
add_subdirectory(JoystickStartPlugin)
add_subdirectory(MotionCapturePlugin)
add_subdirectory(SystemTrayPlugin)
add_subdirectory(VisualEffectPlugin)
add_subdirectory(SimpleColliderPlugin)
add_subdirectory(TaskCreatorPlugin)

if(CMAKE_PROJECT_NAME STREQUAL "Choreonoid")
  add_subdirectory(BookmarkPlugin)
  add_subdirectory(PHITSPlugin)
endif()

if(WIN32 OR APPLE)
  return()
endif()

add_subdirectory(FileExplorerPlugin)
add_subdirectory(NetEmPlugin)
