#if(NOT ENABLE_GUI)
#  return()
#endif()

add_subdirectory(BodyEditPlugin)
add_subdirectory(CFDPlugin)
add_subdirectory(CollisionSeqPlugin)
add_subdirectory(JoystickStartPlugin)
add_subdirectory(MotionCapturePlugin)
add_subdirectory(VFXPlugin)
add_subdirectory(SimpleColliderPlugin)
add_subdirectory(WRSUtilPlugin)

if(CMAKE_PROJECT_NAME STREQUAL "Choreonoid")
  add_subdirectory(BookmarkPlugin)
  add_subdirectory(TaskCreatorPlugin)
  add_subdirectory(PHITSPlugin)
endif()

if(WIN32 OR APPLE)
  return()
endif()

add_subdirectory(BeepPlugin)
add_subdirectory(FileExplorerPlugin)
add_subdirectory(NetEmPlugin)
add_subdirectory(ZBarPlugin)