add_subdirectory(BodyCreatorPlugin)
add_subdirectory(CFDPlugin)
add_subdirectory(JoystickStartPlugin)
add_subdirectory(MotionCapturePlugin)
add_subdirectory(VFXPlugin)
add_subdirectory(SimpleColliderPlugin)
add_subdirectory(WRSUtilPlugin)

if(ENABLE_GUI)
  add_subdirectory(BookmarkPlugin)
  add_subdirectory(PHITSPlugin)
endif()

if(WIN32 OR APPLE)
  return()
endif()

add_subdirectory(BeepPlugin)
add_subdirectory(FileExplorerPlugin)
add_subdirectory(NetEmPlugin)
add_subdirectory(ZBarPlugin)